...
        }}
      >
        <Tabs.Screen
          name="(home)"
          options={{
            title: "Home",
            tabBarAccessibilityLabel: "Home tab",
          }}
        />
        <Tabs.Screen
          name="(search)"
          options={{
            title: "Search",
...
          }}
        />
        <Tabs.Screen
          name="(profile)"
          options={{
            title: "Profile",
            tabBarAccessibilityLabel: "Profile tab",
          }}
        />
      </Tabs>
    </ScrollChromeProvider>
  );
}
...
